--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
     <h3 class="margin">Who Am I?</h3>
-    <img src="pictures/IMG_0118.JPG" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+    <img src="IMG_0118.JPG" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
     <h3>Jonas Okembia - Jonsson</h3>
     <p>Age: 23</p>
     <p>From: Uppsala</p>
@@ -130,7 +130,7 @@
         <div class="col-sm-6">
             <h3>Youth Worker</h3>
             <h4>Uppsala Kommun</h4>
-            <img src="pictures/201602-IVA-Tekniksprånget-Logobilder-UppsalaKommun-vit.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            <img src="201602-IVA-Tekniksprånget-Logobilder-UppsalaKommun-vit.jpg" class="img-responsive margin" style="width:100%" alt="Image">
             <p>Planned, led and developed after-school activities for children aged 10-12yrs and youth aged 13-18.
                 Learned a lot about leadership, pedagogics, administrative work and making sure that 80+ kids per day are feeling safe, secure and having fun in their spare time after school.
                 Cooperation with schools, social services, and other actors was a daily routine in this job.</p>
@@ -139,7 +139,7 @@
         <div class="col-sm-6">
             <h3>Runner/Dishwasher</h3>
             <h4>Oasia Fun Dining AB</h4>
-            <img src="pictures/oasia.png" class="img-responsive margin" style="width: 100%; height: 10%" alt="Image">
+            <img src="oasia.png" class="img-responsive margin" style="width: 100%; height: 10%" alt="Image">
             <p>Worked part-time at Oasia during my high school years, which was a restaurant located in the center of Uppsala.
                 This work involved a lot of teamwork, high tempo and service.</p>
 
@@ -156,7 +156,7 @@
             <h3>BSc, Information Systems</h3>
             <h4>Luleå Univeristy Of Technology </h4>
             <h4>2016-2019</h4>
-            <img src="pictures/ltu.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            <img src="ltu.jpg" class="img-responsive margin" style="width:100%" alt="Image">
             <p>Planned, led and developed after-school activities for children aged 10-12yrs and youth aged 13-18.
                 Learned a lot about leadership, pedagogics, administrative work and making sure that 80+ kids per day are feeling safe, secure and having fun in their spare time after school.
                 Cooperation with schools, social services, and other actors was a daily routine in this job.</p>
@@ -167,7 +167,7 @@
             <h3>Science (Technology)</h3>
             <h4>Fyrisskolan</h4>
             <h4>2010-2013</h4>
-            <img src="pictures/logga-200pix.jpg" class="img-responsive margin" style="width: 100%; height: 10%" alt="Image">
+            <img src="logga-200pix.jpg" class="img-responsive margin" style="width: 100%; height: 10%" alt="Image">
             <p>The program is aimed at those who want a foundation for further studies in the field of technology - all courses offer the opportunity to study university degrees for technical education.
                 Example of courses taken: Math, Advanced English, Physics, CAD, Chemistry, Business Economics, Production, Construction and Computer Science.
                 My project work was "Audio engineering and production. The project received the grade MVG (A).
@@ -182,7 +182,7 @@
             <h3>Exchange Studies (Upcoming)</h3>
             <h4>Nanyang Technological University</h4>
             <h4>Fall of 2018</h4>
-            <img src="pictures/AS-513136693387264@1499352729367_xl.jpeg" class="img-responsive margin" style="width: 100%; height: 10%" alt="Image">
+            <img src="AS-513136693387264@1499352729367_xl.jpeg" class="img-responsive margin" style="width: 100%; height: 10%" alt="Image">
             <p>I have been nominated by Luleå University Of Technology to go on an Exchange semester in Singapore.
                 I will pursue Computer Science courses on this semester.
 
